--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,12 @@ DB_USERNAME=meb_app_dev
 DB_PASSWORD=secret
 DB_ROOT_PASSWORD=secret
 
+## Currency External APIs
+DATAFIXER_URL=http://data.fixer.io/api/latest
+DATAFIXER_KEY=
+AMDOREN_URL=https://www.amdoren.com/api/currency.php
+AMDOREN_KEY=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
@@ -51,3 +57,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
