--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
+        "ext-json": "*",
         "botman/botman": "^2.6",
         "botman/driver-web": "^1.5",
         "fideloper/proxy": "^4.2",
