Fixed: Some adjustments

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ npm-debug.log
 yarn-error.log
 ## PhpStorm Config Files
 /.idea/*
-## Mix Copied Imags
-#/public/img
+## Mix Generated Public Assets
+/public/css/*
+/public/img/*
+/public/js/*
